@@ -17,6 +17,17 @@
         [Qt][WK2] Fix painting on Mac with retina display
         https://bugs.webkit.org/show_bug.cgi?id=104574
 
+        Unreviewed, removing leftover API test.
+
+        This hunk somehow did not make it into the final patch.
+
+        * UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml: Removed.
+
+2012-12-13  Andras Becsi  <andras.becsi@digia.com>
+
+        [Qt][WK2] Fix painting on Mac with retina display
+        https://bugs.webkit.org/show_bug.cgi?id=104574
+
         Reviewed by Kenneth Rohde Christiansen.
 
         Since HiDPI support has been added and enabled in Qt we ended up
